@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.10 2004/08/01 17:19:04 kristerw Exp $
+$NetBSD: distinfo,v 1.11 2004/10/19 23:13:21 hubertf Exp $
 
-SHA1 (centericq-4.10.0.tar.bz2) = 08e5baf14a0c418d6e838de3baf8348d3336f9c2
-Size (centericq-4.10.0.tar.bz2) = 1237063 bytes
+SHA1 (centericq-4.12.0.tar.bz2) = eab50856d1f2aab3ddace1bdfd651dd7d4ff6427
+Size (centericq-4.12.0.tar.bz2) = 1246533 bytes
 SHA1 (patch-aa) = b3e610a1a3b30a716215889b9f51c6de7e78fb22
 SHA1 (patch-ab) = 6d9beb28024666bbfef2e95cab648d7058f8136c
 SHA1 (patch-ac) = 74ae25e19bf5d250a407a937bf78405b38cc86da
